<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Ivo Zivkov (izivkov@gmail.com) on 2022-03-30, 12:06 a.m.
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 2022-03-28, 3:16 p.m.
  -->

<org.avmedia.gShockPhoneSync.ui.actions.ActionItem xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/generic_action_item"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/voice_assistant" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_item"
                android:textSize="24dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/actionEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/disabled"
                android:textOn="@string/enabled" />

        </LinearLayout>
    </LinearLayout>

</org.avmedia.gShockPhoneSync.ui.actions.ActionItem>
