<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Ivo Zivkov (izivkov@gmail.com) on 2022-03-30, 12:06 a.m.
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 2022-03-28, 3:16 p.m.
  -->

<org.avmedia.gShockPhoneSync.ui.alarms.AlarmItem xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardElevation="2dp"
    app:strokeColor="@color/stroke_color"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_00"
                android:textSize="34dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5pt"
                android:text="@string/daily"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/alarmEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/disabled"
                android:textOn="@string/enabled" />

        </LinearLayout>
    </LinearLayout>

</org.avmedia.gShockPhoneSync.ui.alarms.AlarmItem>
