<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Ivo Zivkov (izivkov@gmail.com) on 2022-03-30, 12:06 a.m.
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 2022-03-12, 10:11 a.m.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actions_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.actions.ActionsFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/title_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:text="@string/actions"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <org.avmedia.gShockPhoneSync.ui.actions.ActionList
        android:id="@+id/actionList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0.0"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_actions"
        app:layout_constraintBottom_toTopOf="@+id/action_info"
        />

    <org.avmedia.gShockPhoneSync.customComponents.InfoButton
        android:id="@+id/action_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/info"
        android:src="@drawable/ic_help_24dp"
        app:infoText="@string/actions_screen_info"
        app:layout_constraintTop_toBottomOf="@+id/actionList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>