<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Ivo Zivkov (izivkov@gmail.com) on 2022-03-30, 12:06 a.m.
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 2022-03-28, 3:16 p.m.
  -->

<org.avmedia.gShockPhoneSync.ui.settings.SettingsItem xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardElevation="2dp"
    app:strokeColor="@color/stroke_color"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <TextView
                    android:id="@+id/time_format"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/time_format"
                    android:textSize="20dp"
                    tools:ignore="SpUsage" />

                <RadioGroup
                    android:id="@+id/time_format_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:checkedButton="@+id/front"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/twelve_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/_12h" />

                    <RadioButton
                        android:id="@+id/twenty_four_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/_24h" />
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <TextView
                    android:id="@+id/date_format"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/date_format"
                    android:textSize="20dp"
                    tools:ignore="SpUsage" />

                <RadioGroup
                    android:id="@+id/date_format_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:checkedButton="@+id/front"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/month_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MM:DD" />

                    <RadioButton
                        android:id="@+id/day_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="DD:MM" />
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <TextView
                    android:id="@+id/week_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/language"
                    android:textSize="20dp"
                    tools:ignore="SpUsage" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/language_menu_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_language">

                    <org.avmedia.gShockPhoneSync.ui.settings.LanguageMenu
                        android:id="@+id/language_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="20dp"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</org.avmedia.gShockPhoneSync.ui.settings.SettingsItem>